--- a/MYLAB.CFG
+++ b/MYLAB.CFG
@@ -18,7 +18,7 @@ rootpw --iscrypted $1$2URI08wk$tCKJdWndgysZMwW8mXWUx0
  
 # Host Network Settings
 #network --bootproto=static --addvmportgroup=1 --ip=192.168.0.10 --netmask=255.255.255.0 --gateway=192.168.0.1 --nameserver=192.168.0.1 --hostname=ESXHOST1
-network --bootproto=dhcp --addvmportgroup=1 --hostname=esxhost
+network --bootproto=dhcp --addvmportgroup=1
  
 # Reboot 
 reboot
