Fixed error with clearpart reporting nonexistent drive. Clear only first drive

--- a/MYLAB.CFG
+++ b/MYLAB.CFG
@@ -8,8 +8,8 @@
 vmaccepteula
  
 # Clear paritions and install
-#clearpart --firstdisk --overwritevmfs
-clearpart --alldrives --overwritevmfs
+#clearpart --alldrives --overwritevmfs
+clearpart --firstdisk --overwritevmfs
 install --firstdisk --overwritevmfs
  
 # Set the root password
