Added maintenance mode exit

--- a/MYLAB.CFG
+++ b/MYLAB.CFG
@@ -66,3 +66,7 @@ esxcli network ip set --ipv6-enabled=false
 #Reboot
 sleep 30
 reboot
+
+#Exit Maintenance mode
+vim-cmd hostsvc/maintenance_mode_exit
+
